kubernetes/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: 0mid-net
    app.kubernetes.io/project: 0mid-net
    app.kubernetes.io/env: test
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: 0mid-net
    app.kubernetes.io/project: 0mid-net
    app.kubernetes.io/env: test
  ports:
    - name: http
      port: 80
      targetPort: 8080
