kubernetes/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: 0mid-net
    app.kubernetes.io/project: 0mid-net
    app.kubernetes.io/env: test
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: 0mid.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  name: http
